fulllink-gray/swimlane/v1/istio-routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: swimelane-test
spec:
  hosts:
  - "*"
  gateways:
  - test-gateway
  http:
  - match:
    - uri:
        exact: /mock
      headers:
        x-asm-prefer-tag:
          exact: v1
    route:
    - destination:
        host: mocka
        subset: v1
  - match:
    - uri:
        exact: /mock
      headers:
        x-asm-prefer-tag:
          exact: v2
    route:
    - destination:
        host: mocka
        subset: v2
  - match:
    - uri:
        exact: /mock
    route:
    - destination:
        host: mocka


---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-mockb
spec:
  hosts:
    - mockb
  http:
    - route:
        - destination:
            host: mockb
            subset: $userdefinelabel1

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-mockc
spec:
  hosts:
    - mockc
  http:
    - route:
        - destination:
            host: mockc
            subset: $userdefinelabel1

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mocka
spec:
  host: mocka
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mockb
spec:
  host: mockb
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mockc
spec:
  host: mockc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
